eks/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simplebank-api-deployment
  labels:
    app: simplebank-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simplebank-api
  template:
    metadata:
      labels:
        app: simplebank-api
    spec:
      containers:
        - name: simplebank-api
          image: 928013757580.dkr.ecr.eu-west-2.amazonaws.com/simplebank:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
