eks/service.yml
apiVersion: v1
kind: Service
metadata:
  name: simplebank-api-service
spec:
  selector:
    app: simplebank-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: httpServer
      name: httpService
    - protocol: TCP
      port: 90
      targetPort: grpcServer
      name: grpcService
  type: ClusterIP
