eks/ingress-grpc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simplebank-api-ingress-grpc
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  rules:
    - host: gapi.simplebank.askanymark.io
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: simplebank-api-service
              port:
                number: 90
