eks/ingress-http.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simplebank-api-ingress-http
spec:
  ingressClassName: nginx
  rules:
    - host: api.simplebank.askanymark.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: simplebank-api-service
                port:
                  number: 80
