eks/ingress.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simplebank-api-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: api.simplebank.askanymark.io
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: simplebank-api-service
              port:
                number: 80
